# ChangeLog for dev-libs/libdaemon
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libdaemon/ChangeLog,v 1.53 2008/03/09 23:21:08 eva Exp $

  09 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org> metadata.xml,
  -libdaemon-0.3.ebuild, -libdaemon-0.5.ebuild, -libdaemon-0.7.ebuild,
  -libdaemon-0.8.ebuild, -libdaemon-0.11.ebuild, libdaemon-0.12.ebuild:
  take over maintainership
   * add examples use flag, fix bug #111508
   * remove old revisions
   * use emake to honor MAKEOPTS

  12 Feb 2008; Diego Pettenò <flameeyes@gentoo.org> libdaemon-0.12.ebuild:
  Run elibtoolize.

  07 Feb 2008; Raúl Porcel <armin76@gentoo.org> libdaemon-0.12.ebuild:
  alpha/ia64/sparc stable wrt #208922

  06 Feb 2008; nixnut <nixnut@gentoo.org> libdaemon-0.12.ebuild:
  stable on ppc wrt bug #208922

  06 Feb 2008; Christoph Mende <angelos@gentoo.org> libdaemon-0.12.ebuild:
  Stable on amd64, bug #208922

  06 Feb 2008; Brent Baude <ranger@gentoo.org> libdaemon-0.12.ebuild:
  stable ppc64, bug 208922

  05 Feb 2008; Jeroen Roovers <jer@gentoo.org> libdaemon-0.12.ebuild:
  Stable for HPPA (bug #208922).

  05 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  libdaemon-0.12.ebuild:
  stable x86, bug 208922

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  libdaemon-0.11-r1.ebuild:
  ppc. stable

  26 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  libdaemon-0.11-r1.ebuild:
  Stable on sparc

  21 Jul 2007; Tom Gall <tgall@gentoo.org> libdaemon-0.11-r1.ebuild:
  stable ppc64, bug 182918

*libdaemon-0.12 (11 Jul 2007)

  11 Jul 2007; Sven Wegener <swegener@gentoo.org> +libdaemon-0.12.ebuild:
  Version bump.

  07 Jul 2007; Steve Dibb <beandog@gentoo.org> libdaemon-0.11-r1.ebuild:
  amd64 stable, security bug 182918

*libdaemon-0.11-r1 (29 Jun 2007)

  29 Jun 2007; Remi Cardona <remi@gentoo.org>
  +files/libdaemon-0.11-daemon_close_all.patch, +libdaemon-0.11-r1.ebuild: