@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libdaemon/Attic/libdaemon-0.10.ebuild,v 1.17 2007/06/24 22:13:07 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libdaemon/Attic/libdaemon-0.10.ebuild,v 1.18 2008/05/18 21:16:18 eva Exp $
 
 DESCRIPTION="Simple library for creating daemon processes in C"
 HOMEPAGE="http://0pointer.de/lennart/projects/libdaemon/"
@@ -11,6 +11,7 @@ SLOT="0"
 KEYWORDS="alpha ~amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~x86-fbsd"
 IUSE="doc"
 
+RDEPEND=""
 DEPEND="doc? ( app-doc/doxygen )"
 
 src_compile() {
