@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libdaemon/Attic/libdaemon-0.12.ebuild,v 1.9 2008/03/09 23:21:08 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libdaemon/Attic/libdaemon-0.12.ebuild,v 1.10 2008/05/18 21:16:18 eva Exp $
 
 inherit libtool
 
@@ -13,6 +13,7 @@ SLOT="0"
 KEYWORDS="alpha amd64 ~arm hppa ia64 ~mips ppc ppc64 ~s390 ~sh sparc x86 ~x86-fbsd"
 IUSE="doc examples"
 
+RDEPEND=""
 DEPEND="doc? ( app-doc/doxygen )"
 
 src_unpack() {
